Updated Orbit. Minor fixes in Alignment

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -7,6 +7,10 @@
 }
 **/
 
+.orbit_img {
+margin: 0 auto;
+}
+
 .topbar {width: 100%;}
 .row {min-width:100% !important;}
 
